# Community-Detection

./: .gitignore  CMakeLists.txt  main.cpp
include/: CommunitiesFinder.hpp  Graph.hpp  GraphLoader.hpp  Modularity.hpp  Partition.hpp  communities_finders.hpp  graph_loader.hpp  types.hpp  utils.h  utils.hpp
src/: CommunitiesFinder.cpp  Graph.cpp  GraphLoader.cpp  Modularity.cpp  Partition.cpp  communities_finders.cpp  graph_loader.cpp  leiden_algorithm.cpp  louvain_algorithm.cpp  parallel_leiden_algorithm.cpp
